force-app/main/default/objects/Request_Product__c/Request_Product__c.object-meta.xml
<CustomObject>
    <label>Request Product</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Request Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>