force-app/main/default/objects/Request_Product__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>SFDC_Employee__c</referenceTo>
    <relationshipLabel>Request Products</relationshipLabel>
    <relationshipName>Request_Products</relationshipName>
    <type>Lookup</type>
</CustomField>