force-app/main/default/objects/Request_Product__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipLabel>Request Products</relationshipLabel>
    <relationshipName>Request_Products</relationshipName>
    <type>Lookup</type>
</CustomField>