force-app/main/default/objects/Request_Product__c/fields/Select_Product__c.field-meta.xml
<CustomField>
    <fullName>Select_Product__c</fullName>
    <label>Select Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Notepad/Notebook</fullName>
            </value>
            <value>
                <fullName>Pen</fullName>
            </value>
            <value>
                <fullName>Pencil</fullName>
            </value>
            <value>
                <fullName>Stapler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>