force-app/main/default/objects/Request_Product__c/validationRules/EmployeeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>EmployeeCheck</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Employee__c)</errorConditionFormula>
    <errorMessage>Please provide employee</errorMessage>
</ValidationRule>